sonar code quality fixes